--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -25,7 +25,7 @@ https://github.com/wooorm/franc.
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("mangothecat/franc")
+install.packages("franc")
 ```
 
 ## Usage
